[tool.poetry]
name = "repl-nix-aiphotogenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_aiphotogenerator"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
requests = "^2.32.3"
stability-sdk = "^0.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
